feat: 주간 통계 데이터 목표 횟수 로직 수정
- Meal&Medication 목표 횟수가 이번 주 진행된 기간에 따라 가변적으로 설정되도록 수정 (기존에는 반드시 7일 기간)
- WeeklyStatisticsService 에서 DailyStatistics 데이터를 통해 주간 통계 데이터를 구성하도록 내부 로직 수정
- DailyStatistics 변경사항을 DB에 즉시 반영시켜(flush), WeeklyStatistics 계산 시 직전에 업데이트 된 DailyStatistics를 조회할 수 있도록 보장
- WeeklyStatisticsServiceTest 코드 수정